force-app/main/default/objects/mcdm_15__PersonalizationFieldMap__c/mcdm_15__PersonalizationFieldMap__c.object-meta.xml
<CustomObject>
    <description>Map fields between source object fields and journey event data extension columns.</description>
    <label>Personalization Field Map</label>
    <nameField>
        <displayFormat>DMOFM-{0000}</displayFormat>
        <label>Personalization Field Map</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Personalization Field Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>