force-app/main/default/objects/mcdm_15__PersonalizationFieldMap__c/fields/mcdm_15__DestinationName__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__DestinationName__c</fullName>
    <description>Name of the column in the event data extention used for substitution in the email.</description>
    <label>Destination Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>