force-app/main/default/objects/mcdm_15__PersonalizationFieldMap__c/fields/mcdm_15__IncludeInSendPayload__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__IncludeInSendPayload__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag to include this data when putting someone on a journey.</description>
    <label>Include In Send Payload</label>
    <type>Checkbox</type>
</CustomField>