force-app/main/default/objects/mcdm_15__PersonalizationFieldMap__c/fields/mcdm_15__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__ObjectName__c</fullName>
    <description>Name of the Object (custom or standard) that this mapping is for.</description>
    <label>Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>