force-app/main/default/objects/mcdm_15__PersonalizationFieldMap__c/fields/mcdm_15__SourceName__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__SourceName__c</fullName>
    <description>Name of the field on the object to read from.</description>
    <label>Source Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>