force-app/main/default/objects/mcdm_15__PersonalizationFieldMap__c/fields/mcdm_15__Type__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Type__c</fullName>
    <description>Optional classification for field&#39;s type</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>